@@ -3,9 +3,14 @@ function assert_exist_dir(expr, varargin)
 %  ASSERT_EXIST_DIR(DIR) calls exist(DIR, 'dir') and raises a MATLAB error if it does
 %  not yield 7.
 %
-%  ASSERT_EXIST_DIR(EXPR, MSG, varargin) does the same, but with the custom
+%  ASSERT_EXIST_DIR(DIR, MSG, varargin) does the same, but with the custom
 %  error message MSG. MSG may contain sprintf arguments, which can be
 %  expanded by subsequent arguments in varargin.
+%
+%  ASSERT_EXIST_DIR(DIR, TYPE) calls exist(DIR, 'dir') and raises a MATLAB error if it
+%  does not yield TYPE. TYPE may be a vector of expected exist return values.
+%
+%  ASSERT_EXIST_DIR(DIR, TYPE, MSG, varargin) again, with the custom error message MSG.
 %
 %  ASSERT_EXIST_DIR() just passes.
 %
@@ -13,8 +18,8 @@ function assert_exist_dir(expr, varargin)
 %     % assert that MATLAB's root dir exists
 %     assert_exist_dir(matlabroot, 'Started MATLAB interpreter but missing its root directory.');
 %
-%     % (wrongly) assert that a temporary dir exists
-%     assert_exist_dir(tempname, 'Temporary path has not been created yet.');
+%     % assert that a (not yet created) temporary dir does not exist
+%     assert_exist_dir(tempname, 0, 'Temporary path exists, but should not yet.');
 %
 %  See also  MLUNIT_FAIL
 
@@ -23,37 +28,42 @@ function assert_exist_dir(expr, varargin)
 
 if nargin >= 1
    existResult = exist(expr, 'dir');
-   switch existResult
-      case 7  % valid dir
+   
+   % Check against user-given types
+   if nargin >= 2 && isnumeric(varargin{1})
+      expectedType = varargin{1};
+      varargin = varargin(2:end);
+      
+      if any(expectedType == existResult)
          return
-      case 0
-         reason = sprintf('Expected directory does not exist: %s', expr);
-      otherwise
-         reason = sprintf('Expected directory is actually %s: %s', loc_getExistType(existResult), expr);
+      end
+      
+      reason = loc_customTypeFailMessage(expr, expectedType, existResult);
+   
+   % Check against default types
+   else
+      switch existResult
+         case 7  % valid dir
+            return
+         case 0
+            reason = sprintf('Expected directory does not exist: %s', expr);
+         otherwise
+            reason = sprintf('Expected directory is actually %s: %s', mlunit_getExistType(existResult), expr);
+      end
    end
+   
    mlunit_fail_with_reason(reason, varargin{:});
 end
 
-function typeString = loc_getExistType(existValue)
-   switch existValue
-      case 0
-         typeString = 'missing';
-      case 1
-         typeString = 'a variable';
-      case 2
-         typeString = 'a file';
-      case 3
-         typeString = 'a MEX-file';
-      case 4
-         typeString = 'a Simulink model';
-      case 5
-         typeString = 'a built-in MATLAB function';
-      case 6
-         typeString = 'a P-code file';
-      case 7
-         typeString = 'a folder';
-      case 8
-         typeString = 'a Java class';
-      otherwise
-         typeString = sprintf('an unknown entity (%g)', existValue);
+function reason = loc_customTypeFailMessage(expr, expectedType, existResult)
+
+   if 1 == numel(expectedType)
+      expectedText = sprintf('%s (%s)', mat2str(expectedType), mlunit_getExistType(expectedType));
+   else
+      expectedText = mat2str(expectedType);
    end
+   actualText = sprintf('%s (%s)', mat2str(existResult), mlunit_getExistType(existResult));
+   reason = sprintf('Expected exist result does not match actual result:\n  %-9s: %s\n  %-9s: %s\n  %-9s: %s', ...
+      'Directory', expr, ...
+      'Expected', expectedText, ...
+      'Actual', actualText);
