@@ -6,6 +6,8 @@ mlUnit 1.9.2 (in development)
 -----------------------------
 
   - Skipped tests don't tell the call stack any more.
+  - assert_exist_file and assert_exist_dir may take an optional argument,
+    specifying the expected exist return value.
 
 
 mlUnit 1.9.1 (2020-05-13)
